syntax = "proto3";

package pchat.chat;

option go_package = "pchat/pb/chat";

enum MessageType {
  HEARTBEAT = 0;
}

message Message {
  MessageType type = 1;
  string clientId = 2;
  HeartbeatMessage heartbeat = 50;
}

message NewMessage {
  string id = 1;
  string replyTo = 2;
  string threadId = 3;
  bool isInThread = 4;
  bool showThreadInChat = 5;
  string type = 6;
  string content = 7;
  string fileUrl = 8;
  repeated string mentionedUsers = 9;
  string chatId = 10;
}

message MessageDetail {
  string id = 1;
  string replyTo = 2;
  string threadId = 3;
  bool isInThread = 4;
  bool showThreadInChat = 5;
  string type = 6;
  string content = 7;
  string fileUrl = 8;
  repeated string mentionedUsers = 9;
  string chatId = 10;
  string createdAt = 11;
  bool hasBeenEdited = 12;
  repeated string responseEmojis = 13;
}

message HeartbeatMessage {
  string time = 1;
}
